# hexagonal-employee

./: .gitignore  Cargo.toml  Makefile  README.md
hex_employee_deployment/: docker-compose.yaml
src/: error.rs  helpers.rs  main.rs
src/internals/: mod.rs
src/internals/adaptors/: mod.rs
src/internals/adaptors/app/: add_employee_app.rs  base_app.rs  mod.rs
src/internals/adaptors/core/: mod.rs
src/internals/adaptors/core/config/: config.rs
src/internals/adaptors/core/controllers/: base_controller.rs  create_employee_controller.rs  find_employee_controller.rs  mod.rs
src/internals/adaptors/framework/left/routes/: routes.rs
src/internals/adaptors/framework/left/server/: mod.rs  server.rs  server_error.rs
src/internals/adaptors/framework/right/: db.rs  db_error.rs  mod.rs
src/internals/ports/: app.rs  core.rs  framework_left.rs  framework_right.rs  mod.rs
src/models/: base_models.rs  db_models.rs  employee_models.rs  error.rs  mod.rs
